Change back to original name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </ul>
       </nav>
    <main>
-     <h1>Andy</h1>
+     <h1>Home</h1>
      <p>Welcome to the Principles and Theories of Design website based off the book White Space is not your Enemy. On the webiste you will learn about each individual principle and theory of graphic design. These different rules help the quality and content of your design by creating effective and appeasing visual messages for your audience. Understanding the usage of the principles and theories can help you on mutliple assingments and presentations in the future with using a simple, yet effective design.</p>
      <ul>
      </ul>
