Fixed Spelling Errors

--- a/balance.html
+++ b/balance.html
@@ -27,16 +27,15 @@
       </nav>
    <main>
      <h1>Balance</h1>
-     <p>In design, we think of balance in terms of visual weight.You want your designs and layouts to be visually balanced, unless your communication purpose is to unsettle people by them feel unbalanced and tense or anxious.(p.51)</p>
-       <p> When creating designs, the goal you should always have is that the design to be balanced. We look at designs as if they have visual weight, because you want your audience to feels balanced as well and feel more comfortable while reading you presentation. There are three different forms of balance, radial, symmetrical and asymmetrical. Radial balance is used to refer to circular designs and that if you wer to divide the design, you would gain two symmertical halves. With symmetrical blance, also known as formal balance, is when each side of the design must have that mirror image on the other side of the page to hold its visual weight. Lastly, asymmetrical balance will reveal two unequal sides; it is more visually exciting to the audience compared to the other two forms of balance. </p>
+     <p>In design, we think of balance in terms of visual weight. You want your designs and layouts to be visually balanced, unless your communication purpose is to unsettle people by them feeling unbalanced and tense or anxious.(p.51)</p>
+       <p> When creating designs, the goal you should always have is that the design to be balanced. We look at designs as if they have visual weight, because you want your audience to feels balanced as well and feel more comfortable while reading you presentation. There are three different forms of balance: radial, symmetrical and asymmetrical. Radial balance is used to refer to circular designs and that if you were to divide the design, you would gain two symmertical halves. With symmetrical blance, also known as formal balance, it is when each side of the design must have that mirror image on the other side of the page to hold its visual weight. Lastly, asymmetrical balance will reveal two unequal sides; it is more visually exciting to the audience compared to the other two forms of balance. </p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Balance.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption> The television represents balance because the why the television is standing up on on metal stakes on each end of the television
-         
-         <p> Looking at webistes everyday allows us to look at balance with design. Most websites and that we use have some version of visual design in order to balance out how the audience looks around in the website.</p>
+     <img src="images/Balance.jpeg" class="responsive">
+     <figcaption> The television represents balance because the television is standing up on on metal stakes on each end of the television
      </figcaption>
+        <p> Looking at webistes everyday allows us to look at balance with design. Most websites that we use have some version of visual design in order to balance out how the audience looks around in the website.</p>
    </figure>
      </main>
      <aside>Related links</aside>
