--- a/closure.html
+++ b/closure.html
@@ -27,16 +27,15 @@
       </nav>
    <main>
      <h1>Closure</h1>
-     <p>We mentally fill in the gaps in order to complete a perceived shape. The idea of designing with only a part but having your viewer perceive the whole opens up interesting compositional opportunities, including the interplay of positive and negative space.(p.78)</p>
-       <p> When are minds look at visual designs, we may not know it at the time, we close the gaps or other holes to close the shape that we believe we are seeing. This can really exciting for the desingers because you could create more opportunites to design our work, this includes making adjustments to the negative and positive space.</p>
+     <p>We mentally fill in the gaps in order to complete a perceived shape. The idea of designing with only a part but having your viewer perceive the whole opens up an interesting compositional opportunities, including the interplay of positive and negative space.(p.78)</p>
+       <p> When our minds look at visual designs, we may not know it at the time, we close the gaps or other holes to close the shape that we believe we are seeing. This can be really exciting for the desingers because you could create more opportunities to design our work, this includes making adjustments to the negative and positive space.</p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Closure.jpeg" class="responsive" alt="Sweet cat"/>
+     <img src="images/Closure.jpeg" class="responsive">
      <figcaption> This monitor name represents closure because in the word "Sceptre", the "P" is not fully completed but when we read the name of the monitor, we still read the "P" like it is there in its completion
-        
-         <p> When we look at desings for different products, we may notice closure at all these different products like Apple because we think of there being a whole apple, while the apple has a bite taken out of it.</p>
      </figcaption>
+          <p> When we look at designs for different products, we may notice closure at all these different products like Apple, because we think the whole apple is in the design, while the apple has a bite taken out of it.</p>
    </figure>
      </main>
      <aside>Related links</aside>
