--- a/continuity.html
+++ b/continuity.html
@@ -28,15 +28,14 @@
    <main>
        <h1>Continuity</h1>
      <p>Our minds will continue a pattern beyond its ending points. Further, our eyes will follow the direction of a line. Applying this concept can add a sense of direction and movement to your layout.(p.76)</p>
-       <p> When our minds see designs of continuity, we will mentally continue the pattern past the ending points of the work. As a designer, if you were to include continuity into your design, it can create opportunites to add different elements into you work including movement and a direction that the viewer should interpret the layout. </p>
+       <p> When our minds see designs of continuity, we will mentally continue the pattern past the ending points of the work. As a designer, if you were to include continuity into your design, it can create opportunities to add different elements into you work including movement and a direction that the viewer should interpret the layout. </p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Continuity.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption>TThe butterfly represents continuity as it advances on the outside of the cell phone but the message continues as it represents the butterflies interacting the cell phone owner
-        
-         <p> We see continuity mainly in 3-D movies, as when we watch them in the theather the picture will pop out of the screen but continue to have the same scene</p>
+     <img src="images/Continuity.jpeg" class="responsive">
+     <figcaption>The butterfly represents continuity as it advances on the outside of the cell phone,but the message continues as it represents the butterflies interacting the cell phone owner
      </figcaption>
+         <p> We see continuity mainly in 3-D movies when we watch them in the theather, the picture will pop out of the screen but continue to have the same scene</p>
    </figure>
      </main>
      <aside>Related links</aside>
