--- a/contrast.html
+++ b/contrast.html
@@ -28,15 +28,14 @@
    <main>
      <h1>Contrast</h1>
      <p>Constrast is an important principle for designing interesting (in contrast to dull) layouts. Contrast, as a principle, offers a great deal of flexibility. There are limitless ways to achieve it.(p.51)</p>
-       <p> When it comes to designing interesting layouts for your audience, contrast is a very important principle that is needed to help make an appeasing layout. The best news about contrast are that they have limitless opportunities and can in many ways. You may use contrast between filled and empty space, or employ contrasting line of shapes, or use two different types of patterns and textures, and even use color and value to employ contrast. All of these methods could be used to employ contrast in your layout and help make it more clean and presentable. </p>
+       <p> When it comes to designing interesting layouts for your audience, contrast is a very important principle that is needed to help make an appeasing layout. The best news about contrast is that they have limitless opportunities. You may use contrast between filled and empty space, or employ contrasting lines of shapes, or use two different types of patterns and textures, and even use color and value to employ contrast. All of these methods could be used to employ contrast in your layout and help make it more clean and presentable. </p>
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0880.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption>This sock represents contrast because the Nike symbol is black so that it can contrast with the white sock to help the symbol show the difference in color
-        
-         <p> We see contrast in our everyday lives on the streets as there are multiple street signs that have different colors to show messages including stop signs and crosswalks.</p>
+     <img src="images/IMG_0880.jpeg" class="responsive">
+     <figcaption>This sock represents contrast because the Nike symbol is black so that it can contrast with the white sock to help the symbol stand out in the difference of color.
      </figcaption>
+         <p> We see contrast in our everyday lives as there are multiple street signs that have different colors to show different messages including stop signs and crosswalks.</p>
    </figure>
      </main>
      <aside>Related links</aside>
