--- a/emphasis.html
+++ b/emphasis.html
@@ -27,16 +27,15 @@
       </nav>
    <main>
      <h1>Emphasis</h1>
-     <p>Sometimes called the principle of emphasis, the focal pint is the center ofattention in the design or layout. It is referred as more important thing visually on any layout. Another term for focal point is center of visual interest or CVI because it focuses the eye's attention.(p.50)</p>
-       <p> There is nothing bigger in design than the emphasis/focal point. If you have a layout that does not consist of a focal point, you will have trouble in attempting to capture the audience's attention. But, make sure you do not have more than one focal point so that your audience is not confused on where to draw to its attention too. There is no limitation on what the focal point must be, but just remember that it should be the most eye-catching device on the layout. </p>
+     <p>Sometimes called the principle of emphasis, the focal pint is the center of attention in the design or layout. It is referred as the most important thing visually on any layout. Another term for focal point is center of visual interest or CVI because it focuses the eye's attention.(p.50)</p>
+       <p> There is nothing bigger in design than the emphasis/focal point. If you have a layout that does not consist of a focal point, you will have trouble in capturing the audience's attention. But make sure you do not have more than one focal point so that your audience is confused on where to draw to its attention too. There is no limitation on what the focal point must be, but just remember that it should be the most eye-catching device on the layout. </p>
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0607.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption>This picture represents focal point/emphasis because when you at the sunrise, your eyes directly to the sun
+     <img src="images/IMG_0607.jpeg" class="responsive">
+     <figcaption>This picture represents focal point/emphasis because when you watch the sunrise, your eyes directly to the sun
      </figcaption>
-       
-        <p> We see focal point in our everyday lives as well through looking at logos that represent object like sports teams with the Washington Redskins face is the focal point of the visual design.</p>
+         <p> We see focal point in our everyday lives as well through looking at logos that represent object like sports teams with the Washington Redskins face being the focal point of the design.</p>
    </figure>
      </main>
      <aside>Related links</aside>
