--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </nav>
    <main>
      <h1>Home</h1>
-     <p>Welcome to the Principles and Theories of Design website based off the book White Space is not your Enemy. On the webiste you will learn about each individual principle and theory of graphic design. These different rules help the quality and content of your design by creating effective and appeasing visual messages for your audience. Understanding the usage of the principles and theories can help you on mutliple assingments and presentations in the future with using a simple, yet effective design.</p>
+     <p>Welcome to the Principles and Theories of Design website based off the book White Space is not your Enemy. On the webiste, you will learn about each individual principle and theory of graphic design. These different rules help the quality and content of your design by creating effective and appeasing visual messages for your audience. Understanding the usage of the principles and theories can help you on mutliple assignments and presentations in the future with using a simple, yet effective design.</p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Home%20Page.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption>This is a picture taken from Bald Knob back in March 2019
+     <img src="images/Home%20Page.jpeg" class="responsive">
+     <figcaption>This is a picture taken from Bald Knob back in March 2019.
      </figcaption>
    </figure>
      </main>
