--- a/similarity.html
+++ b/similarity.html
@@ -28,15 +28,14 @@
    <main>
      <h1>Similarity</h1>
      <p> Our minds group things with similar properties, such as color or shape. In layout, we can use similarity to create order and organization through unity.(p.76)</p>
-       <p> When our minds see objects that share similar properties, our minds will group those objects together whether its with shape or color. Similarity plays a big role in layout as it creates order and organization troughout the work and unifies the layout into a clever, eye-catching design. </p>
+       <p> When our minds see objects that share similar properties, our minds will group those objects together whether its with shape or color. Similarity plays a big role in layout as it creates order and organization throughout the work and unifies the layout into a clever, eye-catching design. </p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Similarity.jpeg" class="responsive" alt="Sweet cat"/>
+     <img src="images/Similarity.jpeg" class="responsive">
      <figcaption>This picture shows similarity as all the cups are red, but the two cups on the end are different than the one in the middle because it has "Pizza Hut" written on the cup
-        
-         <p> We see similarity in everyday life including looking at different traffic lights while going a road, different traffic signals made look the same, but they have their own differences in shape </p>
      </figcaption>
+         <p> We see similarity in everyday life including looking at different traffic lights while going a road, different traffic signals may look the same, but they have their own differences in shape. </p>
    </figure>
      </main>
      <aside>Related links</aside>
