--- a/movement.html
+++ b/movement.html
@@ -27,17 +27,16 @@
       </nav>
    <main>
      <h1>Movement</h1>
-     <p>The principle of movement goes back to the idea that good design controls the eye’s flow through the composition. The flow of lines can move the eye across the page or screen.(p.53)</p>
+     <p>The principle of movement goes back to the idea that good design controls the eyes's flow through the composition. The flow of lines can move the eye across the page or screen.(p.53)</p>
         <p> Lines, then, can create movement, and different kinds of linear movement tend to communicate different kinds of symbolic messages. Horizontal lines communicate movement flowing left to right or right to left. Vertical lines tend to communicate stability, such as trees and tall buildings. Vertical lines also may communicate inspirational upward movement, such as mountain peaks, or downward movement, such as a waterfall. Diagonal lines communicate exciting dynamic movement. Two converging diagonal lines communicate distance, such as a road disappearing into a vanishing point in the distance.(p.53)</p>
-       <p> Movement is a nessecity when creating a strong visual layout as it controls the flow of the eyes throughout reading your work. One key type of movement in most layouts are the text, and it can control how the audience is receiving the message. In lines of text, you as the designer can either create horizontal, vertical or diagonal lines. All of these support different reasonings on how the audience should interpret the message. But one key rule for movement, is to make sure that you do not have too many patterns of movement so that you confuse your audience to the point that they can not interpret the message.</p>
+       <p> Movement is a necessity when creating a strong visual layout as it controls the flow of the eyes throughout the reading your work. One key type of movement in most layouts are the text, and it can control how the audience is receiving the message. In lines of text, you as the designer can either create horizontal, vertical or diagonal lines. All of these support different reasonings on how the audience should interpret the message. But one key rule for movement, is to make sure that you do not have too many patterns of movement so that you confuse your audience to the point that they can not interpret the message.</p>
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0881.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption>This picture shows movement because it shows how we are suppose to read the textbook page from left to right
-       
-         <p> Movement in the world can be send everyday as if you are reading a book. In the world around they are plenty lines of movement and all these lines provide different levels on how we look at the world. Another type of movement will be on roads looking at the yellow lines on the road. </p>
+     <img src="images/IMG_0881.jpeg" class="responsive">
+     <figcaption>This picture shows movement because it shows how we are suppose to read the textbook page from left to right.
      </figcaption>
+           <p> Movement in the world can be seen everyday as if you are reading a book. In the world around us, they are plenty of lines that support movement and all these lines provide different levels on how we look at the world. Another type of movement will be on roads looking at the yellow lines in the middle of the road. </p>
    </figure>
      </main>
      <aside>Related links</aside>
