--- a/rhythmpattern.html
+++ b/rhythmpattern.html
@@ -28,16 +28,15 @@
    <main>
      <h1>Rhythm/Pattern</h1>
      <p>A pattern, whether regular or irregular, also may create a sort of movement we could call rhythm.(p.53)</p>
-       <p> Repeating pictures of moons throughout the layout creates a kind of rhythm. Repeating a color such as the yellow of the moon photo also can create rhythmic movement. Using columns to keep your legs of type uniform creates rhythm. Grouping several photos establishes a rhythm. Repeating your fonts throughout a layout generates rhythm. Such visual rhythm not only results in a visual sense of togetherness for the layout but also helps lead the eye from one thing to another.(p.58)</p>
-       <p> A degree a movement is called rhythm/pattern, and it can be either regular or irregular. There are plenty of examples of what can be consider rhythm or pattern, and it is not limited to just pictures. Rhythm can be constructed through compling pitcures together, repeating the fonts in your work, or by keeping the balance of the layout the same while using the same design features. Rhythm is typically founded through continuous actions performed over and over again within the layout with your text, images and design of the layout.</p>
+       <p> Repeating pictures of moons throughout the layout creates a kind of rhythm. Repeating a color such as the yellow of the moon photo also can create rhythmic movement. Using columns to keep your legs of type uniform creates rhythm. Grouping several photos establishes a rhythm. Repeating your fonts throughout a layout generates rhythm. Such visual rhythm not only results in a visual sense of togetherness for the layout, but also helps lead the eye from one thing to another.(p.58)</p>
+       <p> A degree of movement is called rhythm/pattern, and it can be either regular or irregular. There are plenty of examples of what can be consider rhythm or pattern, and it is not limited to just pictures. Rhythm can be constructed through compling pitcures together, repeating the fonts in your work, or by keeping the balance of the layout the same while using the same design features. Rhythm is typically founded through continuous actions performed over and over again within the layout with your text, images and design of the layout.</p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Pattern.jpeg" class="responsive" alt="Sweet cat"/>
-     <figcaption>This is a picture of the Hokie Effect game last season and how the fans in the stands are seperated by the colors in orange and maroon
-        
-         <p> We see rhythm and pattern consisently in our everyday lives, including with a disco ball as they project the lights over and over again in a similar pattern</p>
+     <img src="images/Pattern.jpeg" class="responsive">
+     <figcaption>This is a picture of the Hokie Effect game last season and how the fans in the stands created a pattern by the colors in orange and maroon.
      </figcaption>
+         <p> We see rhythm and pattern consisently in our everyday lives, including with a disco ball as they project the lights over and over again in a similar pattern</p>
    </figure>
      </main>
      <aside>Related links</aside>
