Added a related link

--- a/closure.html
+++ b/closure.html
@@ -38,7 +38,9 @@
           <p> When we look at designs for different products, we may notice closure at all these different products like Apple, because we think the whole apple is in the design, while the apple has a bite taken out of it.</p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
