--- a/emphasis.html
+++ b/emphasis.html
@@ -38,7 +38,9 @@
          <p> We see focal point in our everyday lives as well through looking at logos that represent object like sports teams with the Washington Redskins face being the focal point of the design.</p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
