--- a/proximity.html
+++ b/proximity.html
@@ -39,7 +39,9 @@
         <p> We see proximity a lot in our everyday lives including at our own homes how we typically put different utilites that relate with each other together, including cups, bowls and silverware. </p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
