--- a/rhythmpattern.html
+++ b/rhythmpattern.html
@@ -39,7 +39,9 @@
          <p> We see rhythm and pattern consisently in our everyday lives, including with a disco ball as they project the lights over and over again in a similar pattern</p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
