--- a/similarity.html
+++ b/similarity.html
@@ -38,7 +38,9 @@
          <p> We see similarity in everyday life including looking at different traffic lights while going a road, different traffic signals may look the same, but they have their own differences in shape. </p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
