--- a/unity.html
+++ b/unity.html
@@ -39,7 +39,9 @@
          <p> We see unity in everyday life here at Virginia Tech with the Corp of Cadets all wearing the same uniforms on certain days to represent that they are unified as a group</p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
