--- a/balance.html
+++ b/balance.html
@@ -38,7 +38,9 @@
         <p> Looking at webistes everyday allows us to look at balance with design. Most websites that we use have some version of visual design in order to balance out how the audience looks around in the website.</p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+      <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
