--- a/contrast.html
+++ b/contrast.html
@@ -38,7 +38,9 @@
          <p> We see contrast in our everyday lives as there are multiple street signs that have different colors to show different messages including stop signs and crosswalks.</p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
