--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
      </figcaption>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+         <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
