--- a/movement.html
+++ b/movement.html
@@ -39,7 +39,9 @@
            <p> Movement in the world can be seen everyday as if you are reading a book. In the world around us, they are plenty of lines that support movement and all these lines provide different levels on how we look at the world. Another type of movement will be on roads looking at the yellow lines in the middle of the road. </p>
    </figure>
      </main>
-     <aside>Related links</aside>
+     <aside>Related links
+       <li> <a href="https://www.youtube.com/watch?v=-62Ay0uH__o&t=3s">Hail to the Redskins!</a></li>
+      </aside>
      <footer>For more information check out Andy Loce on Twitter (@andy_loce15)</footer>
   </body>
 </html>
