--- a/balance.html
+++ b/balance.html
@@ -32,9 +32,11 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/Balance.jpeg" class="responsive">
-     <figcaption> The television represents balance because the television is standing up on on metal stakes on each end of the television
+        <h2> Phone Picture</h2>
+     <img src="images/Balance.jpeg" class="responsive" alt="TV">
+     <figcaption> The television represents balance because the television is standing up on on metal stakes on each end of the television.
      </figcaption>
+        <p></p>
         <p> Looking at webistes everyday allows us to look at balance with design. Most websites that we use have some version of visual design in order to balance out how the audience looks around in the website.</p>
    </figure>
      </main>
