--- a/closure.html
+++ b/closure.html
@@ -32,9 +32,11 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/Closure.jpeg" class="responsive">
-     <figcaption> This monitor name represents closure because in the word "Sceptre", the "P" is not fully completed but when we read the name of the monitor, we still read the "P" like it is there in its completion
+        <h2> Phone Picture</h2>
+     <img src="images/Closure.jpeg" class="responsive" alt="Monitor">
+     <figcaption> This monitor name represents closure because in the word "Sceptre", the "P" is not fully completed but when we read the name of the monitor, we still read the "P" like it is there in its completion.
      </figcaption>
+        <p></p>
           <p> When we look at designs for different products, we may notice closure at all these different products like Apple, because we think the whole apple is in the design, while the apple has a bite taken out of it.</p>
    </figure>
      </main>
