--- a/continuity.html
+++ b/continuity.html
@@ -32,10 +32,15 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/Continuity.jpeg" class="responsive">
-     <figcaption>The butterfly represents continuity as it advances on the outside of the cell phone,but the message continues as it represents the butterflies interacting the cell phone owner
+     <h2> Phone Picture </h2>
+        <img src="images/Continuity.jpeg" class="responsive" alt="Butterfly">
+     <figcaption>The butterfly represents continuity as it advances on the outside of the cell phone,but the message continues as it represents the butterflies interacting the cell phone owner.
      </figcaption>
-         <p> We see continuity mainly in 3-D movies when we watch them in the theather, the picture will pop out of the screen but continue to have the same scene</p>
+        <h2> DSLR Picture</h2>
+            <img src="Continuity3.jpg" class="responsive" alt="Poster">
+        <figcaption> This picture represents continuity because the message that states "Let's Go Hokies" is being passed on from poster board to poster board. So even though the poster is not all linked together, we still read the message like it is. </figcaption>
+        <p></p>
+         <p> We see continuity mainly in 3-D movies when we watch them in the theather, the picture will pop out of the screen but continue to have the same scene.</p>
    </figure>
      </main>
      <aside>Related links
