--- a/contrast.html
+++ b/contrast.html
@@ -32,9 +32,14 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0880.jpeg" class="responsive">
+        <h2> Phone Picture</h2>
+     <img src="images/IMG_0880.jpeg" class="responsive" alt="Nike Sock">
      <figcaption>This sock represents contrast because the Nike symbol is black so that it can contrast with the white sock to help the symbol stand out in the difference of color.
      </figcaption>
+        <h2> DSLR Picture</h2>
+        <img src="Contrast2.jpg" class="responsive" alt="Directions">
+        <figcaption> This picture represents contrast because the sign uses white lettering to help make the text stand out on the black background.</figcaption>
+        <p></p>
          <p> We see contrast in our everyday lives as there are multiple street signs that have different colors to show different messages including stop signs and crosswalks.</p>
    </figure>
      </main>
