--- a/emphasis.html
+++ b/emphasis.html
@@ -32,9 +32,14 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0607.jpeg" class="responsive">
-     <figcaption>This picture represents focal point/emphasis because when you watch the sunrise, your eyes directly to the sun
+        <h2> Phone Picture</h2>
+     <img src="images/IMG_0607.jpeg" class="responsive" alt="sunrise">
+     <figcaption>This picture represents focal point/emphasis because when you watch the sunrise, your eyes directly to the sun.
      </figcaption>
+        <h2> DSLR Picture</h2>
+        <img src="Emphasis.jpg" class= "responsive" alt="Bus">
+        <figcaption> This picture represents emphasis because it displays an eye catching device of a class ring on the side of the bus. </figcaption>
+        <p></p>
          <p> We see focal point in our everyday lives as well through looking at logos that represent object like sports teams with the Washington Redskins face being the focal point of the design.</p>
    </figure>
      </main>
