--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/Home%20Page.jpeg" class="responsive">
+        <h2> Phone Picture</h2>
+     <img src="images/Home%20Page.jpeg" class="responsive" alt="Mountain">
      <figcaption>This is a picture taken from Bald Knob back in March 2019.
      </figcaption>
    </figure>
