--- a/movement.html
+++ b/movement.html
@@ -33,8 +33,10 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0881.jpeg" class="responsive">
+        <h2> Phone Picture</h2>
+     <img src="images/IMG_0881.jpeg" class="responsive" alt="Textbook">
      <figcaption>This picture shows movement because it shows how we are suppose to read the textbook page from left to right.
+         <p></p>
      </figcaption>
            <p> Movement in the world can be seen everyday as if you are reading a book. In the world around us, they are plenty of lines that support movement and all these lines provide different levels on how we look at the world. Another type of movement will be on roads looking at the yellow lines in the middle of the road. </p>
    </figure>
