--- a/proximity.html
+++ b/proximity.html
@@ -28,14 +28,16 @@
    <main>
      <h1>Proximity</h1>
      <p>We perceive objects that are close together as belonging to the same group. A related law, the law of Common Fate, says that we perceive objects moving in the same direction as part of the same group. (p.76) </p> 
-       <p> The ability to group content aids in creating organization and order in layouts. Placing elements in proximity to one another goes back to clumping. The idea is to avoid a busy cluttered layout by physically grouping items together that belong together.(p.76) </p>
+       <p> The ability to group content aids in creating organization and order in layouts. Placing elements in proximity to one another goes back to clumping. The idea is to avoid a busy cluttered layout by physically grouping items together that belong together. (p.76) </p>
        <p> When we look at objects that are close together in a way, we preceive those objects to belong to the same group. This does not mean the objects have to be stationary, as if they were to be moving together in the same direction, we will also attach proximity to the movement. One rule that should always be taken into consideration is not to clump all of the objects together, as that will create a cluttered layout. The best rule to avoid in that situation is to only put objects together that should be together. </p>
      <ul>
      </ul>
     <figure>
-     <img src="images/Proximty.jpeg" class="responsive">
-     <figcaption>This picture represents proximity because it shows how forks and spoons are silverware which is used to eat and are close together on the tray
+        <h2> Phone Picture</h2>
+     <img src="images/Proximty.jpeg" class="responsive" alt="Silverware">
+     <figcaption>This picture represents proximity because it shows how forks and spoons are silverware which is used to eat and are close together on the tray.
      </figcaption>
+        <p></p>
         <p> We see proximity a lot in our everyday lives including at our own homes how we typically put different utilites that relate with each other together, including cups, bowls and silverware. </p>
    </figure>
      </main>
