--- a/rhythmpattern.html
+++ b/rhythmpattern.html
@@ -33,10 +33,15 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/Pattern.jpeg" class="responsive">
+        <h2> Phone Picture</h2>
+     <img src="images/Pattern.jpeg" class="responsive" alt="Football">
      <figcaption>This is a picture of the Hokie Effect game last season and how the fans in the stands created a pattern by the colors in orange and maroon.
      </figcaption>
-         <p> We see rhythm and pattern consisently in our everyday lives, including with a disco ball as they project the lights over and over again in a similar pattern</p>
+        <h2> DSLR Picture</h2>
+            <img src="Rhythm.jpg" class="responsive" alt="Umbrellas">
+        <figcaption> This picture represents rhythm and pattern because the yellow umbrellas represent a pattern becuase each umbrella still has the same yellow color. </figcaption>
+        <p></p>
+         <p> We see rhythm and pattern consisently in our everyday lives, including with a disco ball as they project the lights over and over again in a similar pattern.</p>
    </figure>
      </main>
      <aside>Related links
