--- a/similarity.html
+++ b/similarity.html
@@ -32,9 +32,14 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/Similarity.jpeg" class="responsive">
-     <figcaption>This picture shows similarity as all the cups are red, but the two cups on the end are different than the one in the middle because it has "Pizza Hut" written on the cup
+        <h2> Phone Picture</h2>
+     <img src="images/Similarity.jpeg" class="responsive" alt="Pizza">
+     <figcaption>This picture shows similarity as all the cups are red, but the two cups on the end are different than the one in the middle because it has "Pizza Hut" written on the cup.
      </figcaption>
+       <h2> DSLR Picture</h2>
+        <img src="Similarity3.jpg" class= "responsive" alt="Cans">
+        <figcaption> This picture represents similarity becuase although the trash can and recycle bin look the same, they both have different purposes. </figcaption>
+        <p></p>
          <p> We see similarity in everyday life including looking at different traffic lights while going a road, different traffic signals may look the same, but they have their own differences in shape. </p>
    </figure>
      </main>
