--- a/unity.html
+++ b/unity.html
@@ -33,10 +33,12 @@
      <ul>
      </ul>
     <figure>
-     <img src="images/IMG_0867.jpeg" class="responsive">
+        <h2> Photo Picture</h2>
+     <img src="images/IMG_0867.jpeg" class="responsive" alt="White">
      <figcaption>This picture represents the White Effect game against Duke in September 2019, and all the fans are in unity with wearing the color white.
      </figcaption>
-         <p> We see unity in everyday life here at Virginia Tech with the Corp of Cadets all wearing the same uniforms on certain days to represent that they are unified as a group</p>
+        <p></p>
+         <p> We see unity in everyday life here at Virginia Tech with the Corp of Cadets all wearing the same uniforms on certain days to represent that they are unified as a group.</p>
    </figure>
      </main>
      <aside>Related links
